<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@drawable/fondo_felcha"
    tools:context=".view.login_page">

    <!-- titulo -->

    <!--imput email -->

    <TextView
        android:id="@+id/titulo_p3"
        android:layout_width="314dp"
        android:layout_height="76dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/jua"
        android:text="@string/titulo_log"
        android:textColor="@color/negro"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_p3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/jua"
        android:text="@string/email_p3_4"
        android:textColor="@color/negro"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_p3" />

    <!--imput contraseña con material desing -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="@id/email_p3"
        app:layout_constraintTop_toBottomOf="@id/email_p3">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jua"
            android:hint="@string/ing_email_p3_4"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/material_dynamic_neutral80" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua"
        android:text="@string/contrasena_p3_4"
        android:textColor="@color/negro"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="@id/textView3"
        app:layout_constraintTop_toBottomOf="@id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/eye"
            android:fontFamily="@font/jua"
            android:hint="@string/ing_contraseña_p3_4"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/material_dynamic_neutral80" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua"
        android:text="@string/btn_olv_cont_p3_4"
        android:textAlignment="viewStart"
        android:textColor="@color/azul"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="@color/azul"
        android:text="@string/btn_Login_p3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    <Button
        android:id="@+id/button_tiene_cta"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:backgroundTint="@color/blanco"
        android:fontFamily="@font/jua"
        android:text="@string/btn_crea_cta"
        android:textColor="@color/azul"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />


</androidx.constraintlayout.widget.ConstraintLayout>